--- a/frontend/src/pages/layout/Layout.module.css
+++ b/frontend/src/pages/layout/Layout.module.css
@@ -5,31 +5,113 @@
 }
 
 .header {
-    background-color: #0078D4;
-    color: #f2f2f2;
+    background-color: #f2f2f2;
 }
 
 .headerContainer {
     display: flex;
     justify-content: left;
-    margin-right: 12px;
-    margin-left: 12px;
     align-items: center;
 }
 
 .headerTitleContainer {
     display: flex;
     align-items: center;
-    margin-right: 100px;
-    color: #f2f2f2;
+    margin-left: 14px;
     text-decoration: none;
 }
 
-.headerLogo {
-    height: 40px;
+.headerTitle {
+    font-family: 'Segoe UI';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 20px;
+    line-height: 28px;
+    display: flex;
+    align-items: flex-end;
+    color: #242424;
 }
 
-.headerTitle {
-    margin-left: 12px;
+.headerIcon {
+    height: 28px;
+    width: 28px;
+    margin-left: 36px;
+}
+
+.shareButtonContainer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 12px;
+    gap: 4px;
+    width: 86px;
+    height: 32px;
+    background: radial-gradient(109.81% 107.82% at 100.1% 90.19%, #0F6CBD 33.63%, #2D87C3 70.31%, #8DDDD8 100%) /* warning: gradient uses a rotation that is not supported by CSS and may not behave as expected */;
+    border-radius: 4px;
+    flex: none;
+    order: 1;
+    flex-grow: 0;
+    position: absolute;
+    right: 20px;
+    cursor: pointer;
+}
+
+.shareButton {
+    color: #FFFFFF;
+}
+
+.shareButtonText {
+    font-family: 'Segoe UI';
+    font-style: normal;
     font-weight: 600;
+    font-size: 14px;
+    line-height: 20px;
+    display: flex;
+    align-items: center;
+    color: #FFFFFF;
+}
+
+.urlTextBox {
+    font-family: 'Segoe UI';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 20px;
+    color: #707070;
+    border: 1px solid #D1D1D1;
+    border-radius: 4px;
+}
+
+.copyButtonContainer {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 12px;
+    gap: 4px;
+    background: #FFFFFF;
+    border: 1px solid #D1D1D1;
+    border-radius: 4px;
+}
+
+.copyButtonContainer:hover {
+    cursor: pointer;
+    background: #D1D1D1;
+}
+
+.copyButton {
+    color: #424242;
+}
+
+.copyButtonText {
+    font-family: 'Segoe UI';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 14px;
+    line-height: 20px;
+    display: flex;
+    align-items: center;
+    color: #242424;
 }
