--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,8 +12,7 @@ body {
 html {
     background: #f2f2f2;
 
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-        sans-serif;
+    font-family: "Segoe UI";
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
