--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -11,8 +11,7 @@ body {
 
 html {
     background: #f2f2f2;
-
-    font-family: "Segoe UI";
+    font-family: "Segoe UI", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
