--- a/frontend/src/components/Answer/Answer.module.css
+++ b/frontend/src/components/Answer/Answer.module.css
@@ -10,7 +10,7 @@
 }
 
 .answerText {
-    font-family: 'Segoe UI';
+    font-family: "Segoe UI";
     font-style: normal;
     font-weight: 400;
     font-size: 14px;
@@ -39,7 +39,7 @@
 }
 
 .answerDisclaimer {
-    font-family: 'Segoe UI';
+    font-family: "Segoe UI";
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
@@ -56,7 +56,7 @@
 
 .citationContainer {
     margin-left: 10px;
-    font-family: 'Segoe UI';
+    font-family: "Segoe UI";
     font-style: normal;
     font-weight: 600;
     font-size: 12px;
@@ -91,7 +91,7 @@
     flex: none;
     flex-grow: 0;
     z-index: 2;
-    font-family: 'Segoe UI';
+    font-family: "Segoe UI";
     font-style: normal;
     font-weight: 600;
     font-size: 10px;
@@ -124,7 +124,7 @@
 .accordionTitle {
     margin-right: 5px;
     margin-left: 10px;
-    font-family: 'Segoe UI';
+    font-family: "Segoe UI";
     font-style: normal;
     font-weight: 400;
     font-size: 12px;
@@ -153,7 +153,7 @@ sup {
     order: 2;
     flex-grow: 0;
     z-index: 2;
-    font-family: 'Segoe UI';
+    font-family: "Segoe UI";
     font-style: normal;
     font-weight: 600;
     font-size: 10px;
