Icon update and small UX fixes

--- a/frontend/src/components/Answer/Answer.module.css
+++ b/frontend/src/components/Answer/Answer.module.css
@@ -22,6 +22,8 @@
     flex-grow: 0;
     margin: 11px;
     white-space: pre-wrap;
+    word-wrap: break-word;
+    max-width: 800px;
 }
 
 .answerFooter {
