--- a/frontend/src/pages/layout/Layout.module.css
+++ b/frontend/src/pages/layout/Layout.module.css
@@ -72,6 +72,11 @@
     color: #FFFFFF;
 }
 
+.dropdownContainer {
+    position: absolute;
+    right: 120px;
+}
+
 .urlTextBox {
     font-family: "Segoe UI";
     font-style: normal;
