--- a/frontend/src/components/InfoCardList/InfoCardList.module.css
+++ b/frontend/src/components/InfoCardList/InfoCardList.module.css
@@ -1,16 +1,7 @@
-:host {
-    
-    .cardListContainer {
-        height: 120px;
-        position: absolute;
-        left: 6.5%;
-        right: 0%;
-        top: 0%;
-        bottom: 0%;
-        background: #FFFFFF;
-        box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
-        border-radius: 8px;
-    }
-    
+.cardListContainer {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    padding: 20px;
+    height: 350px;
 }
-
