--- a/frontend/src/components/InfoCardList/InfoCardList.module.css
+++ b/frontend/src/components/InfoCardList/InfoCardList.module.css
@@ -1,10 +1,12 @@
+@import '../../styles/variables/colors.css';
+@import '../../styles/variables/typography.css';
+
 .cardListContainer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    gap: 20px;
+    gap: 27px;
     padding: 20px;
     height: 350px;
-
 }
 
 @media(max-width: 800px) {
