--- a/frontend/src/components/InfoCard/InfoCard.module.css
+++ b/frontend/src/components/InfoCard/InfoCard.module.css
@@ -36,7 +36,7 @@
     font-weight: var(--theme-typography-front-weight-mid);
 }
 
-.imageItem {
+.descriptionImage {
     height: 24px;
     width: 24px;
     margin-top: 10px;
