integrate cards into main page layout

--- a/frontend/src/components/InfoCardList/InfoCardList.module.css
+++ b/frontend/src/components/InfoCardList/InfoCardList.module.css
@@ -7,6 +7,8 @@
     gap: 27px;
     padding: 20px;
     height: 350px;
+    margin-top: 2%;
+    margin-bottom: 10%;
 }
 
 @media(max-width: 800px) {
