mvp chatHistory backend integration

--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -164,6 +164,23 @@
     z-index: 1;
 }
 
+.clearChatBroomNoCosmos {
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    left: 7px;
+    top: 66px;
+    color: #FFFFFF;
+    border: 1px solid #D1D1D1;
+    border-radius: 4px;
+    z-index: 1;
+}
+
 .newChatIcon {
     box-sizing: border-box;
     display: flex;
