--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -84,7 +84,7 @@
 
 .chatMessageUserMessage {
     padding: 20px;
-    background: #EDF5FD;
+    background: #effded;
     border-radius: 8px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
     font-style: normal;
@@ -108,7 +108,6 @@
 
 .chatMessageError {
     padding: 20px;
-    /* background: #EDF5FD; */
     border-radius: 8px;
     box-shadow: rgba(182, 52, 67, 1) 1px 1px 2px, rgba(182, 52, 67, 1) 0px 0px 1px;
     
