--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -30,6 +30,7 @@
 .chatEmptyState {
     flex-grow: 1;
     display: flex;
+    width: 50%;
     flex-direction: column;
     justify-content: center;
     align-items: center;
