--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -2,17 +2,12 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    gap: 20px
+    margin-top: 20px;
 }
 
 .chatRoot {
     flex: 1;
     display: flex;
-    margin-top: 0px;
-    margin-bottom: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
-    gap: 5px;
 }
 
 .chatContainer {
@@ -20,11 +15,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: radial-gradient(108.78% 108.78% at 50.02% 19.78%, #FFFFFF 57.29%, #EEF6FE 100%);
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 8px;
-    overflow-y: auto;
-    max-height: calc(100vh - 100px);
+    width: 100%;
 }
 
 .chatEmptyState {
@@ -33,40 +24,36 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    max-height: 1024px;
+    padding-top: 60px;
 }
 
 .chatEmptyStateTitle {
-    font-style: normal;
-    font-weight: 700;
-    font-size: 36px;
-    display: flex;
-    align-items: flex-end;
-    text-align: center;
-    line-height: 24px;
-    margin-top: 36px;
-    margin-bottom: 0px;
+    font-size: 4rem;
+    font-weight: 600;
+    margin-top: 0;
+    margin-bottom: 30px;
 }
 
 .chatEmptyStateSubtitle {
-    margin-top: 20px;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 150%;
-    display: flex;
-    align-items: flex-end;
-    text-align: center;
-    letter-spacing: -0.01em;
-    color: #616161;
+    font-weight: 600;
+    margin-bottom: 10px;
 }
 
-.chatIcon {
-    height: 62px;
-    width: 62px;
+@media only screen and (max-height: 780px) {
+    .chatEmptyState {
+        padding-top: 0;
+    }
+
+    .chatEmptyStateTitle {
+        font-size: 3rem;
+        margin-bottom: 0px;
+    }
 }
 
 .chatMessageStream {
     flex-grow: 1;
+    max-height: 1024px;
     max-width: 1028px;
     width: 100%;
     overflow-y: auto;
@@ -74,235 +61,55 @@
     padding-right: 24px;
     display: flex;
     flex-direction: column;
-    margin-top: 24px;
-}
-
-.chatMessageUser {
-    display: flex;
-    justify-content: flex-end;
-    margin-bottom: 12px;
-}
-
-.chatMessageUserMessage {
-    padding: 20px;
-    background: #EDF5FD;
-    border-radius: 8px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 22px;
-    color: #242424;
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-    white-space: pre-wrap;
-    word-wrap: break-word;
-    max-width: 800px;
 }
 
 .chatMessageGpt {
-    margin-bottom: 12px;
+    margin-bottom: 20px;
     max-width: 80%;
     display: flex;
+    min-width: 500px;
 }
 
-.chatMessageError {
-    padding: 20px;
-    /* background: #EDF5FD; */
-    border-radius: 8px;
-    box-shadow: rgba(182, 52, 67, 1) 1px 1px 2px, rgba(182, 52, 67, 1) 0px 0px 1px;
-    
-    color: #242424;
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-    
-    max-width: 800px;
-    /* filter: drop-shadow(rgba(182, 52, 67, 1) 1px 1px 2px) drop-shadow(rgba(182, 52, 67, 1) 0px 0px 1px); */
-}
-
-.chatMessageErrorContent {
-    font-family: "Segoe UI";
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 22px;
-    white-space: pre-wrap;
-    word-wrap: break-word;
-    gap: 12px;
-    align-items: center;
+.chatMessageGptMinWidth {
+    max-width: 500px;
+    margin-bottom: 20px;
 }
 
 .chatInput {
     position: sticky;
+    bottom: 0;
     flex: 0 0 100px;
     padding-top: 12px;
     padding-bottom: 24px;
     padding-left: 24px;
     padding-right: 24px;
-    width: calc(100% - 100px);
-    max-width: 1028px;
-    margin-bottom: 50px;
-    margin-top: 8px;
-}
-
-.clearChatBroom {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    left: 7px;
-    top: 13px;
-    color: #FFFFFF;
-    border: 1px solid #D1D1D1;
-    border-radius: 4px;
-    z-index: 1;
-}
-
-.clearChatBroomNoCosmos {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    left: 7px;
-    top: 66px;
-    color: #FFFFFF;
-    border: 1px solid #D1D1D1;
-    border-radius: 4px;
-    z-index: 1;
-}
-
-.newChatIcon {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    left: 7px;
-    top: 66px;
-    color: #FFFFFF;
-    border: 1px solid #D1D1D1;
-    border-radius: 4px;
-    z-index: 1;
-}
-
-.stopGeneratingContainer {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-    padding: 5px 16px;
-    gap: 4px;
-    position: absolute;
-    width: 161px;
-    height: 32px;
-    left: calc(50% - 161px/2 + 25.8px);
-    bottom: 116px;
-    border: 1px solid #D1D1D1;
-    border-radius: 16px;
-}
-
-.stopGeneratingIcon {
-    width: 14px;
-    height: 14px;
-    color: #424242;
-}
-
-.stopGeneratingText {
-    width: 103px;
-    height: 20px;
-    font-style: normal;
-    font-weight: 600;
-    font-size: 14px;
-    line-height: 20px;
-    display: flex;
-    align-items: center;
-    color: #242424;
-    flex: none;
-    order: 0;
-    flex-grow: 0;
-}
-
-.citationPanel {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    padding: 16px 16px;
-    gap: 8px;
-    background: #FFFFFF;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 8px;
-    flex: auto;
-    order: 0;
-    align-self: stretch;
-    flex-grow: 0.3;
-    max-width: 30%;
-    overflow-y: scroll;
-    max-height: calc(100vh - 100px);
-}
-
-.citationPanelHeaderContainer {
     width: 100%;
+    max-width: 1028px;
+    background: #f2f2f2;
 }
 
-.citationPanelHeader {
-    font-style: normal;
-    font-weight: 600;
-    font-size: 18px;
-    line-height: 24px;
-    color: #000000;
-    flex: none;
-    order: 0;
-    flex-grow: 0;
+.chatAnalysisPanel {
+    flex: 1;
+    overflow-y: auto;
+    max-height: 89vh;
+    margin-left: 20px;
+    margin-right: 20px;
 }
 
-.citationPanelDismiss {
-    width: 18px;
-    height: 18px;
-    color: #424242;
+.chatSettingsSeparator {
+    margin-top: 15px;
 }
 
-.citationPanelDismiss:hover {
-    background-color: #D1D1D1;
-    cursor: pointer;
+.loadingLogo {
+    font-size: 28px;
 }
 
-.citationPanelTitle {
-    font-style: normal;
-    font-weight: 600;
-    font-size: 16px;
-    line-height: 22px;
-    color: #323130;
-    margin-top: 12px;
-    margin-bottom: 12px;
-} 
+.commandsContainer {
+    display: flex;
+    align-self: flex-end;
+}
 
-.citationPanelContent {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 20px;
-    color: #000000;
-    flex: none;
-    order: 1;
-    align-self: stretch;
-    flex-grow: 0;
-} 
-
-a {
-    padding-left: 5px;
-    padding-right: 5px;
+.commandButton {
+    margin-right: 20px;
+    margin-bottom: 20px;
 }
