--- a/frontend/src/components/Answer/Answer.module.css
+++ b/frontend/src/components/Answer/Answer.module.css
@@ -1,12 +1,13 @@
 .answerContainer {
-    display: flex;
+    color:white; /* add */
+    /* display: flex;
     flex-direction: column;
     align-items: flex-start;
     padding: 8.1285px;
     gap: 5.42px;
     background: #FFFFFF;
     box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
-    border-radius: 5.419px;
+    border-radius: 5.419px; */
 }
 
 .answerText {
@@ -14,7 +15,7 @@
     font-weight: 400;
     font-size: 14px;
     line-height: 20px;
-    color: #323130;
+    color: white;
     flex: none;
     order: 1;
     align-self: stretch;
