--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -78,14 +78,15 @@
 }
 
 .chatMessageUser {
+    background-color: #181C4C;  /* add */
     display: flex;
     justify-content: flex-end;
-    margin-bottom: 12px;
+    /* margin-bottom: 12px; */
 }
 
 .chatMessageUserMessage {
     padding: 20px;
-    background: #EDF5FD;
+    /* background: #EDF5FD;
     border-radius: 8px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
     font-style: normal;
@@ -98,12 +99,14 @@
     flex-grow: 0;
     white-space: pre-wrap;
     word-wrap: break-word;
-    max-width: 800px;
+    max-width: 800px; */
+    color : white; /* add */
 }
 
 .chatMessageGpt {
-    margin-bottom: 12px;
-    max-width: 80%;
+    background-color: #11102C; /* add */
+    /* margin-bottom: 12px; */
+    max-width: 100%;
     display: flex;
 }
 
