--- a/frontend/src/components/QuestionInput/QuestionInput.module.css
+++ b/frontend/src/components/QuestionInput/QuestionInput.module.css
@@ -5,13 +5,13 @@
     right: 0%;
     top: 0%;
     bottom: 0%;
-    background: #FFFFFF;
-    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
+    /* background: #FFFFFF; */
+    /* box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12); */
     border-radius: 8px;
 }
 
 .questionInputTextArea {
-    width: 100%;
+    width: 76%;
     line-height: 40px;
     margin-top: 10px;
     margin-bottom: 10px;
@@ -20,10 +20,19 @@
 }
 
 .questionInputSendButtonContainer {
+    box-sizing: border-box;
+    position: absolute;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     right: 24px;
     bottom: 20px;
-}
+    color: #FFFFFF;
+    border: 10px solid #D1D1D1;
+    border-radius: 4px;
+    z-index: 1;
+    }
 
 .questionInputSendButton {
     width: 24px;
