--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -20,7 +20,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: radial-gradient(108.78% 108.78% at 50.02% 19.78%, #FFFFFF 57.29%, #EEF6FE 100%);
+    background: radial-gradient(108.78% 108.78% at 50.02% 19.78%, #242424 57.29%, #000000 100%);
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
     border-radius: 8px;
     overflow-y: auto;
@@ -75,6 +75,7 @@
     display: flex;
     flex-direction: column;
     margin-top: 24px;
+    background-color: #242424;
 }
 
 .chatMessageUser {
