--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -2,7 +2,7 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    gap: 20px
+    gap: 20px;
 }
 
 .chatRoot {
@@ -20,7 +20,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: radial-gradient(108.78% 108.78% at 50.02% 19.78%, #FFFFFF 57.29%, #EEF6FE 100%);
+    background: radial-gradient(108.78% 108.78% at 50.02% 19.78%, #FFFFFF 57.29%, #EEF6FE 50%);
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
     border-radius: 8px;
     overflow-y: auto;
@@ -57,7 +57,7 @@
     align-items: flex-end;
     text-align: center;
     letter-spacing: -0.01em;
-    color: #616161;
+    color: #4B5C65;
 }
 
 .chatIcon {
@@ -85,7 +85,7 @@
 
 .chatMessageUserMessage {
     padding: 20px;
-    background: #EDF5FD;
+    background: #4B5C65 10%;
     border-radius: 8px;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
     font-style: normal;
@@ -120,9 +120,9 @@
 }
 
 .chatMessageErrorContent {
-    font-family: "Segoe UI";
+    font-family: 'Raleway', sans-serif;
     font-style: normal;
-    font-weight: 400;
+    font-weight: 300;
     font-size: 14px;
     line-height: 22px;
     white-space: pre-wrap;
@@ -156,7 +156,7 @@
     left: 7px;
     top: 13px;
     color: #FFFFFF;
-    border: 1px solid #D1D1D1;
+    border: 1px solid #4B5C65;
     border-radius: 4px;
     z-index: 1;
 }
@@ -173,7 +173,7 @@
     left: 7px;
     top: 66px;
     color: #FFFFFF;
-    border: 1px solid #D1D1D1;
+    border: 1px solid #4B5C65;
     border-radius: 4px;
     z-index: 1;
 }
@@ -190,7 +190,7 @@
     left: 7px;
     top: 66px;
     color: #FFFFFF;
-    border: 1px solid #D1D1D1;
+    border: 1px solid #4B5C65;
     border-radius: 4px;
     z-index: 1;
 }
@@ -208,7 +208,7 @@
     height: 32px;
     left: calc(50% - 161px/2 + 25.8px);
     bottom: 116px;
-    border: 1px solid #D1D1D1;
+    border: 1px solid #4B5C65;
     border-radius: 16px;
 }
 
@@ -273,7 +273,7 @@
 }
 
 .citationPanelDismiss:hover {
-    background-color: #D1D1D1;
+    background-color: #4B5C65;
     cursor: pointer;
 }
 
@@ -319,7 +319,7 @@ a {
     align-items: center;
     padding: 4px 6px;
     gap: 4px;
-    border: 1px solid #D1D1D1;
+    border: 1px solid #4B5C65;
     border-radius: 4px;
 }
 
