--- a/frontend/src/components/Answer/Answer.module.css
+++ b/frontend/src/components/Answer/Answer.module.css
@@ -132,9 +132,9 @@
     color: #616161;
 }
 
-.accordionTitle:hover {
+/* .accordionTitle:hover {
     cursor:pointer;
-}
+} */
 
 .clickableSup {
     box-sizing: border-box;
