--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,21 +1,18 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
-html,
 body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-html {
-    background: #f2f2f2;
-    font-family: "Segoe UI", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-
-#root {
-    height: 100%;
+@media only screen and (max-width: 768px) {
+  body {
+    width: fit-content;
+  }
 }
