Rename to prepare for conversion to object

--- a/frontend/src/components/Answer/Answer.module.css
+++ b/frontend/src/components/Answer/Answer.module.css
@@ -173,3 +173,8 @@ sup {
     font-size: 10px;
     line-height: 10px;
 }
+
+.reportInappropriateContent {
+    color: #115EA3;
+    cursor: pointer;
+}
