--- a/frontend/src/pages/chat/Chat.module.css
+++ b/frontend/src/pages/chat/Chat.module.css
@@ -60,6 +60,41 @@
     color: #616161;
 }
 
+.boxesContainer {
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    gap: 20px; 
+    margin-top: 20px; 
+}
+
+.box {
+    width: 100px; 
+    height: 100px; 
+    border: 1px solid #b8b3b3; 
+    display: flex;
+    justify-content: center; 
+    align-items: center; 
+    text-align: center; 
+    padding: 10px; 
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2); 
+    background-color: #bdb8b8; 
+    border-radius: 5px;
+    transition: transform 0.3s ease, box-shadow 0.3s ease; 
+}
+
+.box:hover {
+    box-shadow: 0 4px 8px rgba(0,0,0,0.3); 
+    transform: scale(1.05); 
+    cursor: pointer; 
+}
+
+@media (max-width: 600px) {
+    .boxesContainer {
+        flex-direction: column;
+    }
+}
+
 .chatIcon {
     height: 62px;
     /* width: 62px; */
